...
            selectedIcon: Icon(Icons.bookmark),
            label: 'Reading list',
          ),
          NavigationDestination(
            key: AppDebugKey.feedsNavDestination,
            icon: Icon(Icons.rss_feed),
            label: 'Feeds',
          ),
        ],
      ),
    );
  }
}
...
