...
    return Scaffold(
      key: AppDebugKey.feedsScreen,
      appBar: AppBar(
        actions: [
          IconButton(
            key: AppDebugKey.addFeedButton,
            tooltip: 'Add feed',
            icon: const Icon(Icons.add),
            onPressed: () => context.pushNamed(routeFeedSearchName),
          ),
          IconButton(
            key: AppDebugKey.settingsButton,
            tooltip: 'Settings',
...
